<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddVideoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/videoTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="video"
        android:inputType="text"
        android:hint="@string/titreVideoHint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginHorizontal="10dp"
        />

    <EditText
        android:id="@+id/videoDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="video"
        android:inputType="text"
        android:hint="@string/descriptionVideoHint"
        app:layout_constraintTop_toBottomOf="@id/videoTitre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="10dp"
        />

    <EditText
        android:id="@+id/videoUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="video"
        android:inputType="textUri"
        android:hint="@string/urlVideoHint"
        app:layout_constraintTop_toBottomOf="@id/videoDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="10dp"
        />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoUrl"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCancel"
        app:layout_constraintTop_toBottomOf="@id/spinnerCategory"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancel"
        app:layout_constraintStart_toEndOf="@id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerCategory"
        android:layout_marginTop="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>